RESOLVED FIXED126971
[Mac] WebCore icon database appears to leak sudden termination assertions
https://bugs.webkit.org/show_bug.cgi?id=126971
Summary [Mac] WebCore icon database appears to leak sudden termination assertions
Mark Rowe (bdash)
Reported 2014-01-14 02:14:35 PST
* STEPS TO REPRODUCE 1. Run Safari under the Sudden Termination instrument in Instruments. 2. Wait for a minute or two until everything has settled down. * RESULTS # Caller Function Disable Count Mode Safety Rating 19261 _CFSuddenTerminationDisable 18438 Disable count in the 18,000s!
Attachments
Patch (8.60 KB, patch)
2014-01-14 02:22 PST, Mark Rowe (bdash)
no flags
Mark Rowe (bdash)
Comment 1 2014-01-14 02:14:46 PST
Mark Rowe (bdash)
Comment 2 2014-01-14 02:22:18 PST
WebKit Commit Bot
Comment 3 2014-01-14 12:24:14 PST
Comment on attachment 221132 [details] Patch Clearing flags on attachment: 221132 Committed r161995: <http://trac.webkit.org/changeset/161995>
WebKit Commit Bot
Comment 4 2014-01-14 12:24:16 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.