Source/WebCore/loader/icon/IconDatabase.h
@@ -55,6 +55,7 @@ class URL;
 class PageURLRecord;
 class PageURLSnapshot;
 class SharedBuffer;
+class SuddenTerminationDisabler;
 
 #if ENABLE(ICONDATABASE)
 class SQLTransaction;
@@ -141,6 +142,7 @@ private:
     void performScheduleOrDeferSyncTimer();
 
     bool m_scheduleOrDeferSyncTimerRequested;
+    std::unique_ptr<SuddenTerminationDisabler> m_disableSuddenTerminationWhileSyncTimerScheduled;
 
 // *** Any Thread ***
 public:
@@ -165,7 +167,7 @@ private:
     bool m_removeIconsRequested;
     bool m_iconURLImportComplete;
     bool m_syncThreadHasWorkToDo;
-    bool m_disabledSuddenTerminationForSyncThread;
+    std::unique_ptr<SuddenTerminationDisabler> m_disableSuddenTerminationWhileSyncThreadHasWorkToDo;
 
     Mutex m_urlAndIconLock;
     // Holding m_urlAndIconLock is required when accessing any of the following data structures or the objects they contain
